--- a/src/html/main-list.html
+++ b/src/html/main-list.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html lang="pt-br">
     <head>
+        <title>Produtos</title>
         <link href="../resources/css/main.css" rel="stylesheet"/>
     </head>
     <body>
         <header class="site-header">
-            <img class="logo" src="../resources/images/logo.png"/>
-            <div class="search-bar">
-                <input class="search-bar__input"></input>
-                <button class="search-bar__button">Pesquisar</button>
+            <img itemprop="logo" class="site-header__logo" src="../resources/images/logo.png"/>
+            <div class="site-header__search-bar">
+                <input></input>
+                <button>Pesquisar</button>
             </div>
-            <aside>
+            <aside class="site-header__sidebox">
                 <button>Carrinho</button>
                 <button>Entrar</button>
             </aside>
-            <nav>
+            <nav class="site-header__menu">
                 <ul>
                     <li>
                         <a href="#">Camisas</a>
@@ -32,40 +33,82 @@
             </nav>
         </header>
         <main class="site-main">
-            <section class="products">
-                <ul>
-                    <li>
-                        <article class="product-summary">
-                            <div class="product-image">
-                                <img src="../resources/images/logo.png"/>
+            <section class="site-main__articlebox__product__summary-box">
+                <ul class="site-main__articlebox__product__summary-box__ul">
+                    <li class="site-main__articlebox__product__summary-box__ul__li">
+                        <article itemscope itemtype="http://schema.org/Product" class="site-main__articlebox__product__summary-box__ul__li__summary">
+                            <div class="site-main__articlebox__product__summary-box__ul__li__summary__image">
+                                <img itemprop="image" src="../resources/images/logo.png"/>
                             </div>
-                            <h5>Calça</h5>
-                            <span>R$86,70</span>
+                            <h5 itemprop="name">Calça</h5>
+                            <div itemscope itemprop="offers" itemtype="http://schema.org/Offer">
+                                <meta itemprop="priceCurrency" content="R$" />
+                                <span itemprop="price">R$86,70</span>
+                            </div>
                         </article>
                     </li>
-                    <li>
-                        <article class="product-summary">
-                            <div class="product-image">
-                                <img src="../resources/images/logo.png"/>
+                    <li class="site-main__articlebox__product__summary-box__ul__li">
+                        <article itemscope itemtype="http://schema.org/Product" class="site-main__articlebox__product__summary-box__ul__li__summary">
+                            <div class="site-main__articlebox__product__summary-box__ul__li__summary__image">
+                                <img itemprop="image" src="../resources/images/logo.png"/>
                             </div>
-                            <h5>Camisa do Cruzeiro</h5>
-                            <span>R$199,90</span>
+                            <h5 itemprop="name">Camisa do Cruzeiro</h5>
+                            <div itemscope itemprop="offers" itemtype="http://schema.org/Offer">
+                                <meta itemprop="priceCurrency" content="R$" />
+                                <span itemprop="price">R$199,90</span>
+                            </div>
                         </article>
                     </li>
-                    <li>
-                        <article class="product-summary">
-                            <div class="product-image">
-                                <img src="../resources/images/logo.png"/>
+                    <li class="site-main__articlebox__product__summary-box__ul__li">
+                        <article itemscope itemtype="http://schema.org/Product" class="site-main__articlebox__product__summary-box__ul__li__summary">
+                            <div class="site-main__articlebox__product__summary-box__ul__li__summary__image">
+                                <img itemprop="image" src="../resources/images/logo.png"/>
                             </div>
-                            <h5>Bermuda</h5>
-                            <span>R$59,90</span>
+                            <h5 itemprop="name">Bermuda</h5>
+                            <div itemscope itemprop="offers" itemtype="http://schema.org/Offer">
+                                <meta itemprop="priceCurrency" content="R$" />
+                                <span itemprop="price">R$59,90</span>
+                            </div>
                         </article>
                     </li>
                 </ul>
             </section>
         </main>
         <footer class="site-footer">
-
+            <ul class="site-footer__ul">
+                <li class="site-footer__ul__li">
+                    <section itemscope itemtype="http://schema.org/ContactPoint" class="site-footer__ul__li__contact">
+                        <header>
+                            Contato
+                        </header>
+                        <span itemprop="email">contato@emprasa.com</span>
+                        <span itemprop="telephone">(31) 3275-9999</span>
+                    </section>
+                </li>
+                <li class="site-footer__ul__li">
+                    <section itemscope itemtype="http://schema.org/Offer" class="site-footer__ul__li__payment">
+                        <meta itemprop="acceptedPaymentMethod" content="http://purl.org/goodrelations/v1#DirectDebit"/>
+                        <meta itemprop="acceptedPaymentMethod" content="http://purl.org/goodrelations/v1#PayPal"/>
+                        <header>
+                            Pagamento
+                        </header>
+                        <span>Crédito</span>
+                        <span>Débito</span>
+                        <span>Paypal</span>
+                    </section>
+                </li>
+                <li class="site-footer__ul__li">
+                    <article itemscope itemtype="http://schema.org/Organization" class="site-footer__ul__li__company">
+                        <link itemprop="logo" href="../resources/images/logo.png"/>
+                        <header itemprop="name">
+                            Empresa
+                        </header>
+                        <p itemprop="description">
+                            Sobre a empresa djalkjsdf alsdjf alsj alsddjf lajsd  lasjdf lajsd  alsdjfajsd aljdfla sdj aldjfa jsd l aldjf lajsd 
+                        </p>
+                    </article>
+                </li>
+            </ul>
         </footer>
     </body>
 </html>
